# async_chat_fastapi

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mongo-init.js  prometheus.yml  pyproject.toml  pytest.ini
app/: .gitignore  alembic.ini  aws.py  cache.py  config.py  dependencies.py  enum.py  exceptions.py  main.py  permissions.py  security.py  tasks.py  utils.py  worker.py
app/auth/: authorization.py  cookie.py
app/chat/: chat.py
app/db/: db.py  mongo.py  postgres.py
app/kafka/: channel.py  consumers.py  producers.py  serializers.py  transport.py
app/kafka/services/: mongo.py  redis.py
app/middleware/: auth_middleware.py  context.py  metrics.py  prometheus.py
app/migrations/: env.py
app/models/: base_model.py  mixins.py  models.py
app/permissions/: decorators.py
app/repositories/: _repository.py  conversation_repository.py  message_repository.py  mongo_repository.py  permission_repository.py  role_permission_repository.py  role_repository.py  sqlalchemy_repository.py  user_role_repository.py  users_repository.py
app/routers/: auth.py  conversation.py  messages.py  permission.py  permissions.py  role.py  roles.py  users.py
app/schemas/: auth.py  base.py  conversation.py  message.py  permission.py  role.py  role_permission.py  user.py  user_role.py
app/services/: _service.py  conversation.py  message.py  permission.py  role.py  role_permission.py  user_role.py  users.py
app/tests/: __init__.py  conftest.py  docker-compose.test.yml
app/types/: channel.py  codecs.py  lifecycle.py  message.py  transport.py
app/uow/: uow.py
(+17 files in other folders)
